--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -29,5 +29,5 @@
   "mn17:4.9": "Dopo aver valutato, quel mendicante deve lasciare quella giungla; non deve stare lì.",
   "mn17:5.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
   "mn17:5.2": "Vivendo lì, la sua presenza mentale viene stabilita, la sua mente si raccoglie, i suoi contaminanti vengono eliminati, e arriva al santuario supremo.",
-  "mn17:5.3": "Ma le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare."
+  "mn17:5.3": "Ma le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. Quel mendicante deve riflettere:"
 }
