--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -33,5 +33,6 @@
   "mn17:5.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …",
   "mn17:5.6": "Ma le necessità della vita sono difficili da trovare.",
   "mn17:5.7": "Ma non ho lasciato la vita laica per quella ascetica per le tuniche, cibo elemosinati, alloggi, o medicine e provvigioni per malati.",
-  "mn17:5.8": "Inoltre, vivendo qui, la mia presenza mentale viene stabilita …’"
+  "mn17:5.8": "Inoltre, vivendo qui, la mia presenza mentale viene stabilita …’",
+  "mn17:5.9": "Dopo aver valutato, quel mendicante deve rimanere in quella giungla; non deve andarsene."
 }
