--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -36,5 +36,6 @@
   "mn17:5.8": "Inoltre, vivendo qui, la mia presenza mentale viene stabilita …’",
   "mn17:5.9": "Dopo aver valutato, quel mendicante deve rimanere in quella giungla; non deve andarsene.",
   "mn17:6.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
-  "mn17:6.2": "La sua presenza mentale viene stabilita …"
+  "mn17:6.2": "La sua presenza mentale viene stabilita …",
+  "mn17:6.3": "E le necessità della vita sono facili da trovare."
 }
