--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -41,5 +41,6 @@
   "mn17:6.4": "Quel mendicante deve riflettere:",
   "mn17:6.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …",
   "mn17:6.6": "E le necessità della vita sono facili da trovare.’",
-  "mn17:6.7": "Quel mendicante deve rimanere in quella giungla per il resto della sua vita; non deve andarsene."
+  "mn17:6.7": "Quel mendicante deve rimanere in quella giungla per il resto della sua vita; non deve andarsene.",
+  "mn17:7-22.1": "Prendete un mendicante che vive supportato da un villaggio …"
 }
