--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -49,5 +49,6 @@
   "mn17:23.1": "un individuo.",
   "mn17:23.2": "Vivendo lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo.",
   "mn17:23.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. …",
-  "mn17:23.7": "Quel mendicante deve lasciare quella persona in qualsiasi momento della giornata o notte, senza chiedere. Non deve seguirla. …"
+  "mn17:23.7": "Quel mendicante deve lasciare quella persona in qualsiasi momento della giornata o notte, senza chiedere. Non deve seguirla. …",
+  "mn17:26.1": "Prendete un altro mendicante che vive supportato da un individuo."
 }
