--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -52,5 +52,6 @@
   "mn17:23.7": "Quel mendicante deve lasciare quella persona in qualsiasi momento della giornata o notte, senza chiedere. Non deve seguirla. …",
   "mn17:26.1": "Prendete un altro mendicante che vive supportato da un individuo.",
   "mn17:26.2": "Vivendo lì, la sua presenza mentale viene stabilita, la sua mente si raccoglie, i suoi contaminanti vengono eliminati, e arriva al santuario supremo.",
-  "mn17:26.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono facili da trovare."
+  "mn17:26.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono facili da trovare.",
+  "mn17:26.4": "Quel mendicante deve riflettere:"
 }
