--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -53,5 +53,6 @@
   "mn17:26.1": "Prendete un altro mendicante che vive supportato da un individuo.",
   "mn17:26.2": "Vivendo lì, la sua presenza mentale viene stabilita, la sua mente si raccoglie, i suoi contaminanti vengono eliminati, e arriva al santuario supremo.",
   "mn17:26.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono facili da trovare.",
-  "mn17:26.4": "Quel mendicante deve riflettere:"
+  "mn17:26.4": "Quel mendicante deve riflettere:",
+  "mn17:26.5": "‘Vivendo supportato da questa persona, la mia presenza mentale viene stabilita …"
 }
