--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -55,5 +55,6 @@
   "mn17:26.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono facili da trovare.",
   "mn17:26.4": "Quel mendicante deve riflettere:",
   "mn17:26.5": "‘Vivendo supportato da questa persona, la mia presenza mentale viene stabilita …",
-  "mn17:26.6": "E le necessità della vita sono facili da trovare.’"
+  "mn17:26.6": "E le necessità della vita sono facili da trovare.’",
+  "mn17:26.7": "Quel mendicante deve seguire quella persona per il resto della propria vita. Non deve lasciarla, persino se mandato via.”"
 }
