--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -56,5 +56,6 @@
   "mn17:26.4": "Quel mendicante deve riflettere:",
   "mn17:26.5": "‘Vivendo supportato da questa persona, la mia presenza mentale viene stabilita …",
   "mn17:26.6": "E le necessità della vita sono facili da trovare.’",
-  "mn17:26.7": "Quel mendicante deve seguire quella persona per il resto della propria vita. Non deve lasciarla, persino se mandato via.”"
+  "mn17:26.7": "Quel mendicante deve seguire quella persona per il resto della propria vita. Non deve lasciarla, persino se mandato via.”",
+  "mn17:26.8": "Questo è ciò che il Buddha disse."
 }
