--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -57,5 +57,6 @@
   "mn17:26.5": "‘Vivendo supportato da questa persona, la mia presenza mentale viene stabilita …",
   "mn17:26.6": "E le necessità della vita sono facili da trovare.’",
   "mn17:26.7": "Quel mendicante deve seguire quella persona per il resto della propria vita. Non deve lasciarla, persino se mandato via.”",
-  "mn17:26.8": "Questo è ciò che il Buddha disse."
+  "mn17:26.8": "Questo è ciò che il Buddha disse.",
+  "mn17:26.9": "Soddisfatti, i mendicanti furono contenti di ciò che il Buddha disse."
 }
