--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -26,7 +26,7 @@
   "mn17:4.6": "Ma le necessità della vita sono facili da trovare.",
   "mn17:4.7": "Ma non ho lasciato la vita laica per quella ascetica per le tuniche, cibo elemosinati, alloggi, o medicine e provvigioni per malati.",
   "mn17:4.8": "Inoltre, vivendo qui, la mia presenza mentale non viene stabilita …’",
-  "mn17:4.9": "Dopo aver valutato, quel mendicante deve andarsene da quella giungla; non deve stare lì.",
+  "mn17:4.9": "Dopo aver valutato, quel mendicante deve lasciare quella giungla; non deve stare lì.",
   "mn17:5.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
   "mn17:5.2": "Vivendo lì, la sua presenza mentale viene stabilita, la sua mente si raccoglie, i suoi contaminanti vengono eliminati, e arriva al santuario supremo.",
   "mn17:5.3": "Ma le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. Quel mendicante deve riflettere:",
