--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -3,5 +3,6 @@
   "mn18:0.2": "La Torta al Miele",
   "mn18:1.1": "Così ho sentito.",
   "mn18:1.2": "Una volta il Buddha si trovava nella terra dei Sakya vicino a Kapilavatthu nel monastero dell'Albero di Banyan.",
-  "mn18:2.1": "Poi al mattino il Buddha si vestì e, prendendo la propria ciotola e tunica, entrò a Kapilavatthu per l'elemosina."
+  "mn18:2.1": "Poi al mattino il Buddha si vestì e, prendendo la propria ciotola e tunica, entrò a Kapilavatthu per l'elemosina.",
+  "mn18:2.2": "Vagò per Kapilavatthu per l'elemosina. Dopo il pasto, al ritorno dal giro per l'elemosina, andò alla Grande Selva."
 }
