--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -6,5 +6,6 @@
   "mn18:2.1": "Poi al mattino il Buddha si vestì e, prendendo la propria ciotola e tunica, entrò a Kapilavatthu per l'elemosina.",
   "mn18:2.2": "Vagò per Kapilavatthu per l'elemosina. Dopo il pasto, al ritorno dal giro per l'elemosina, andò nella Grande Selva,",
   "mn18:2.3": "addentrandosi profondamente, e si sedette alla radice di un giovane albero di mele per la meditazione quotidiana.",
-  "mn18:3.1": "Daṇḍapāṇi il Sakya, mentre faceva una passeggiata,"
+  "mn18:3.1": "Daṇḍapāṇi il Sakya, mentre faceva una passeggiata,",
+  "mn18:3.2": "si addentrò nella Grande Selva. Andò dal Buddha e ci scambiò saluti."
 }
