--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -122,7 +122,7 @@
   "mn26:16.9": "‘Non è solo per fede che Rāma ha dichiarato: “Ho realizzato questo insegnamento con la mia conoscenza diretta, e vivo avendolo raggiunto.”",
   "mn26:16.10": "Sicuramente medita conoscendo e vedendo questo insegnamento.’",
   "mn26:16.11": "Quindi sono andato da Uddaka, figlio di Rāma, e gli ho detto,",
-  "mn26:16.12": "‘Reverendo, fino a che punto Rāma diceva di aver realizzato questo insegnamento con la propria esperienza diretta?’",
+  "mn26:16.12": "‘Fratello, fino a che punto Rāma diceva di aver realizzato questo insegnamento con la propria esperienza diretta?’",
   "mn26:16.13": "In risposta lui dichiarò la dimensione della né percezione né non-percezione.",
   "mn26:16.14": "Poi ho pensato,",
   "mn26:16.15": "‘Non è solo Rāma che aveva fede,",
