--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -54,7 +54,7 @@
   "mn5:7.8": "morirà con mente incorrotta.",
   "mn5:8.1": "Questa è la causa, questa è la ragione per cui, tre le due persone con un difetto, una è considerata come peggiore e l'altra come migliore.",
   "mn5:8.2": "E questa è la causa, questa è la ragione per cui, tre le due persone senza difetti, una è considerata come peggiore e l'altra come migliore?”",
-  "mn5:9.1": "“Reverendo, si parla di ‘difetto’.",
+  "mn5:9.1": "“Fratello, si parla di ‘difetto’.",
   "mn5:9.2": "Ma ‘difetto’ è un termine che sta per cosa?”",
   "mn5:9.3": "“Reverendo, ‘difetto’ è un termine che sta per le sfere di desideri cattivi e malsani.",
   "mn5:10.1": "È possibile che un mendicante desideri:",
