--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -124,7 +124,7 @@
   "mn5:30.12": "Perché questo?",
   "mn5:30.13": "È perché si è visto e sentito che queste sfere di desideri cattivi e malsani sono state abbandonate da quel venerabile.",
   "mn5:31.1": "Detto ciò, il Venerabile Mahāmoggallāna disse a Sāriputta:",
-  "mn5:31.2": "“Reverendo Sāriputta, mi viene in mente una similitudine.”",
+  "mn5:31.2": "“Fratello Sāriputta, mi viene in mente una similitudine.”",
   "mn5:31.3": "“Allora parla come ti senti ispirato,” disse Sāriputta.",
   "mn5:31.4": "“Reverendo, una volta mi trovavo proprio qui a Rājagaha, a Giribbaja.",
   "mn5:31.5": "Poi al mattino mi vestì e, prendendo la mia ciotola e tunica, entrai a Rājagaha per l'elemosina.",
