--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -98,7 +98,7 @@
   "mn26:15.21": "Presto ho realizzato quell'insegnamento con la mia conoscenza diretta, e ho vissuto avendolo raggiunto.",
   "mn26:15.22": "Quindi sono andato da Āḷāra Kālāma e gli ho detto,",
   "mn26:15.23": "‘Fratello Kālāma, tu hai realizzato questo insegnamento con la tua conoscenza diretta fino a questo punto, e dichiari di averlo raggiunto?’",
-  "mn26:15.24": "‘Sì, reverendo.’",
+  "mn26:15.24": "‘Sì, Fratello.’",
   "mn26:15.25": "‘Anche io, reverendo, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
   "mn26:15.26": "‘Siamo fortunati, reverendo, molto fortunati",
   "mn26:15.27": "di avere un venerabile come te come compagno spirituale!",
