--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -99,7 +99,7 @@
   "mn26:15.22": "Quindi sono andato da Āḷāra Kālāma e gli ho detto,",
   "mn26:15.23": "‘Fratello Kālāma, tu hai realizzato questo insegnamento con la tua conoscenza diretta fino a questo punto, e dichiari di averlo raggiunto?’",
   "mn26:15.24": "‘Sì, Fratello.’",
-  "mn26:15.25": "‘Anche io, reverendo, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
+  "mn26:15.25": "‘Anche io, Fratello, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
   "mn26:15.26": "‘Siamo fortunati, reverendo, molto fortunati",
   "mn26:15.27": "di avere un venerabile come te come compagno spirituale!",
   "mn26:15.28": "Quindi l'insegnamento che io ho realizzato con la mia conoscenza diretta, e che dichiaro di aver raggiunto, anche tu hai realizzato con la tua conoscenza diretta, e vivi avendolo realizzato.",
