--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -106,13 +106,13 @@
   "mn26:15.29": "L'insegnamento che tu hai realizzato con la tua esperienza diretta, e vivi avendo realizzato, anche io ho realizzato con la mia esperienza diretta, e dichiaro di averlo realizzato.",
   "mn26:15.30": "Quindi l'insegnamento che io conosco, lo conosci anche tu, e l'insegnamento che tu conosci, lo conosco anche io.",
   "mn26:15.31": "Io sono come te e tu sei come me.",
-  "mn26:15.32": "Vieni, reverendo! Guidiamo questa comunità insieme.’",
+  "mn26:15.32": "Vieni, Fratello! Guidiamo questa comunità insieme.’",
   "mn26:15.33": "E così il il mio maestro Āḷāra Kālāma mise me, il suo studente, al suo stesso posto, e mi onorava con lodi elevate.",
   "mn26:15.34": "Poi ho pensato,",
   "mn26:15.35": "‘Questo insegnamento non porta alla disillusione, allo svanire della passione, alla cessazione, alla pace, alla realizzazione, al risveglio, e all'estinzione. Porta solamente alla nascita nella dimensione del nulla.’",
   "mn26:15.36": "Realizzando che quell'insegnamento era inadeguato, me ne sono andato deluso.",
   "mn26:16.1": "Sono partito alla ricerca di ciò che è sano, cercando lo stato supremo di pace sublime. Sono andato da Uddaka, il figlio di Rāma, e gli ho detto,",
-  "mn26:16.2": "‘Reverendo, desidero condurre la vita spirituale secondo questo insegnamento e addestramento.’",
+  "mn26:16.2": "‘Fratello, desidero condurre la vita spirituale secondo questo insegnamento e addestramento.’",
   "mn26:16.3": "Uddaka rispose,",
   "mn26:16.4": "‘Rimani, venerabile.",
   "mn26:16.5": "Questo insegnamento è tale che le persone ragionevoli possano presto realizzare la tradizione con la propria conoscenza diretta e vivere avendolo raggiunto.’",
