--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -41,7 +41,7 @@
   "mn5:6.3": "Immagina che un disco di bronzo pulito e luminoso venga preso in un negozio o da un fabbro.",
   "mn5:6.4": "Ed i proprietari non lo usino o non lo facciano pulire, ma lo tengano in un posto sporco.",
   "mn5:6.5": "Col tempo, quel disco di bronzo non diventerebbe sempre più sporco e macchiato?”",
-  "mn5:6.6": "\"Sì, reverendo.\"",
+  "mn5:6.6": "\"Sì, Fratello.\"",
   "mn5:6.7": "“Allo stesso modo, prendi il caso della persona senza difetti ma che non lo capisce. Ci si può aspettare che ...",
   "mn5:6.8": "morirà con mente corrotta.",
   "mn5:7.1": "Prendi il caso della persona senza difetti e che lo capisce. Ci si può aspettare che non si concentri sulla caratteristica della bellezza, e grazie a questo, che brama non infetti la sua mente.",
