--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -134,7 +134,7 @@
   "mn26:16.21": "Presto ho realizzato quell'insegnamento con la mia conoscenza diretta, e ho vissuto avendolo raggiunto.",
   "mn26:16.22": "Quindi sono andato da Uddaka, figlio di Rāma, e gli ho detto,",
   "mn26:16.23": "‘Fratello, Rāma aveva realizzato questo insegnamento con la propria conoscenza diretta fino a questo punto, e dichiarò di averlo raggiunto?’",
-  "mn26:16.24": "‘Sì, reverendo.’",
+  "mn26:16.24": "‘Sì, Fratello.’",
   "mn26:16.25": "‘Anche io, reverendo, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
   "mn26:16.26": "‘Siamo fortunati, reverendo, molto fortunati",
   "mn26:16.27": "di avere un venerabile come te come compagno spirituale!",
