--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -135,7 +135,7 @@
   "mn26:16.22": "Quindi sono andato da Uddaka, figlio di Rāma, e gli ho detto,",
   "mn26:16.23": "‘Fratello, Rāma aveva realizzato questo insegnamento con la propria conoscenza diretta fino a questo punto, e dichiarò di averlo raggiunto?’",
   "mn26:16.24": "‘Sì, Fratello.’",
-  "mn26:16.25": "‘Anche io, reverendo, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
+  "mn26:16.25": "‘Anche io, Fratello, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
   "mn26:16.26": "‘Siamo fortunati, reverendo, molto fortunati",
   "mn26:16.27": "di avere un venerabile come te come compagno spirituale!",
   "mn26:16.28": "Quindi l'insegnamento che Rāma aveva realizzato con la propria conoscenza diretta, e che dichiarò di aver raggiunto, anche tu hai realizzato con la tua conoscenza diretta, e vivi avendolo realizzato.",
