--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -86,7 +86,7 @@
   "mn14:18.4": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.5": "‘Ma reverendi, voi sapete",
   "mn14:18.6": "per certo che avete compito cattive azioni in passato?’",
-  "mn14:18.7": "‘No non lo sappiamo, reverendo.’",
+  "mn14:18.7": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.8": "‘Ma reverendi, voi sapete",
   "mn14:18.9": "che avete compiuto questa o quella cattiva azione?’",
   "mn14:18.10": "‘No non lo sappiamo, reverendo.’",
