--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -89,10 +89,10 @@
   "mn14:18.7": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.8": "‘Ma reverendi, voi sapete",
   "mn14:18.9": "che avete compiuto questa o quella cattiva azione?’",
-  "mn14:18.10": "‘No non lo sappiamo, reverendo.’",
+  "mn14:18.10": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.11": "‘Ma reverendi, voi sapete",
   "mn14:18.12": "che così tanta sofferenza è già stata espiata? O che così tanta sofferenza rimane da espiare? O che una volta che tanta sofferenza sarà espiata ogni sofferenza sarà espiata?’",
-  "mn14:18.13": "‘No non lo sappiamo, reverendo.’",
+  "mn14:18.13": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.14": "‘Ma reverendi, voi sapete",
   "mn14:18.15": "della possibilità di abbandonare qualità malsane nella vita presente e di sposare qualità sane?’",
   "mn14:18.16": "‘No non lo sappiamo, reverendo.’",
