--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -66,7 +66,7 @@
   "mn9:19.1": "Un discepolo nobile comprende in questo modo la sofferenza, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione. Ha abbandonato completamente la tenenza latente all'avidità, si è sbarazzato della tendenza latente all'avversione, e ha eradicato la tendenza latente alla presunzione ‘io sono’. Ha abbandonato l'ignoranza e dato origine alla conoscenza, ed ha posto fine alla sofferenza in questa stessa vita.",
   "mn9:19.2": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.”",
   "mn9:20.1": "Dicendo “Bene, Fratello,” quei mendicanti ... fecero un'altra domanda:",
-  "mn9:20.2": "“Ma reverendo, potrebbe esserci un altro modo di descrivere un discepolo nobile che ... è giunto al vero insegnamento?”",
+  "mn9:20.2": "“Ma Fratello, potrebbe esserci un altro modo di descrivere un discepolo nobile che ... è giunto al vero insegnamento?”",
   "mn9:21-22.1": "“Può esserci, reverendi.",
   "mn9:21-22.2": "Un discepolo nobile comprende la vecchiaia e la morte, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione ...",
   "mn9:21-22.4": "Ma cos'è sono vecchiaia e morte? Qual'è la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione?",
