--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -158,7 +158,7 @@
   "mn9:64-66.7": "Non comprendere la sofferenza, l'origine della sofferenza, la cessazione della sofferenza, e la pratica che porta alla cessazione della sofferenza.",
   "mn9:64-66.8": "Questo si chiama ignoranza.",
   "mn9:64-66.9": "L'ignoranza origina dai contaminanti. L'ignoranza cessa quando i contaminanti cessano. La pratica che porta alla cessazione dell'ignoranza è semplicemente questo nobile ottuplice percorso ...”",
-  "mn9:68.1": "Dicendo “Bene, reverendo,” quei mendicanti approvarono e concordarono con ciò che Sāriputta disse. Poi fecero un'altra domanda:",
+  "mn9:68.1": "Dicendo “Bene, Fratello,” quei mendicanti approvarono e concordarono con ciò che Sāriputta disse. Poi fecero un'altra domanda:",
   "mn9:68.2": "“Ma reverendo, potrebbe esserci un altro modo di descrivere un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento?”",
   "mn9:69.1": "“Può esserci, reverendi.",
   "mn9:69.2": "Un discepolo nobile comprende i contaminanti, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione.",
