--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -33,7 +33,7 @@
   "mn9:8.2": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.”",
   "mn9:9.1": "Dicendo “Bene, Fratello,” quei mendicanti approvarono e concordarono con ciò che Sāriputta disse. Poi fecero un'altra domanda:",
   "mn9:9.2": "“Ma Fratello, potrebbe esserci un altro modo di descrivere un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento?”",
-  "mn9:10.1": "“Può esserci, reverendi.",
+  "mn9:10.1": "“Può esserci, Fratelli.",
   "mn9:10.2": "Un discepolo nobile comprende l'alimento, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:10.3": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.",
   "mn9:11.1": "Ma cos'è l'alimento? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
