--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -46,7 +46,7 @@
   "mn9:12.2": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.”",
   "mn9:13.1": "Dicendo “Bene, Fratello,” quei mendicanti ... fecero un'altra domanda:",
   "mn9:13.2": "“Ma Fratello, potrebbe esserci un altro modo di descrivere un discepolo nobile che ... è giunto al vero insegnamento?”",
-  "mn9:14-18.1": "“Può esserci, reverendi.",
+  "mn9:14-18.1": "“Può esserci, Fratelli.",
   "mn9:14-18.2": "Un discepolo nobile comprende la sofferenza, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:14-18.3": "Una volta fatto ciò, è definito come un discepolo nobile che ... è giunto al vero insegnamento.",
   "mn9:14-18.4": "Ma cos'è la sofferenza? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
