--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -67,7 +67,7 @@
   "mn9:19.2": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.”",
   "mn9:20.1": "Dicendo “Bene, Fratello,” quei mendicanti ... fecero un'altra domanda:",
   "mn9:20.2": "“Ma Fratello, potrebbe esserci un altro modo di descrivere un discepolo nobile che ... è giunto al vero insegnamento?”",
-  "mn9:21-22.1": "“Può esserci, reverendi.",
+  "mn9:21-22.1": "“Può esserci, Fratelli.",
   "mn9:21-22.2": "Un discepolo nobile comprende la vecchiaia e la morte, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione ...",
   "mn9:21-22.4": "Ma cos'è sono vecchiaia e morte? Qual'è la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione?",
   "mn9:21-22.5": "La vecchiaia, decrepitezza, denti rotti, capelli grigi, pelle rugosa, vitalità diminuita, e facoltà deboli dei vari esseri viventi nelle varie classi di esseri viventi.",
@@ -79,7 +79,7 @@
   "mn9:21-22.11": "Queste si chiamano vecchiaia e morte.",
   "mn9:21-22.12": "Vecchiaia e morte originano dalla nascita. Vecchiaia e morte cessano quando la nascita cessa. La pratica che porta alla cessazione della vecchiaia e della morte è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:24-26.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:24-26.3": "“Può esserci, reverendi.",
+  "mn9:24-26.3": "“Può esserci, Fratelli.",
   "mn9:24-26.4": "Un discepolo nobile comprende la nascita, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione ...",
   "mn9:24-26.6": "Ma cos'è la nascita? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:24-26.7": "La nascita, inizio, concepimento, reincarnazione, manifestazione degli aggregati, ed acquisizione dei campi sensoriali dei vari esseri viventi nelle varie classi di esseri viventi.",
