--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -86,14 +86,14 @@
   "mn9:24-26.8": "Questo si chiama nascita.",
   "mn9:24-26.9": "La nascita origina dalla continuazione dell'esistenza. La nascita cessa quando la continuazione dell'esistenza cessa. La pratica che porta alla cessazione della nascita è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:28-30.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:28-30.3": "“Può esserci, reverendi.",
+  "mn9:28-30.3": "“Può esserci, Fratelli.",
   "mn9:28-30.4": "Un discepolo nobile la continuazione dell'esistenza, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:28-30.6": "Ma cos'è la continuazione dell'esistenza? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:28-30.7": "Ci sono questi tre stati di continuazione dell'esistenza.",
   "mn9:28-30.8": "Esistenza nel regno dei sensi, nel regno della forma, e nel regno senza forma.",
   "mn9:28-30.9": "La continuazione dell'esistenza origina dall'attaccamento. La continuazione dell'esistenza cessa quando l'attaccamento cessa. La pratica che porta alla cessazione della continuazione dell'esistenza è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:32-34.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:32-34.3": "“Può esserci, reverendi.",
+  "mn9:32-34.3": "“Può esserci, Fratelli.",
   "mn9:32-34.4": "Un discepolo nobile comprende l'attaccamento, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:32-34.6": "Ma cos'è l'attaccamento? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:32-34.7": "Ci sono questi quattro tipi di attaccamento.",
